# tourboy-back

./: .gitignore  Cargo.toml
database/: cnm.postgres.sql
etc/: cnm.json
etc/cnm/: forgotpasswordmail.html  verifmail.html
src/: auth.rs  config.rs  errors.rs  lib.rs  mailer.rs  main.rs  models.rs  paginator.rs  router.rs
src/models/: band.rs  contact.rs  filter.rs  note.rs  org.rs  user.rs
src/router/: band.rs  note.rs  org.rs  user.rs
