[package]
name = "cnm"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
chrono = { version = "0.4.19", features = ["serde"] }
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
jsonwebtoken = "8.1.1"
lettre = "0.10.1"
postgres-types = { version = "0.2.3", features = ["with-chrono-0_4"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tinytemplate = "1.2.1"
tokio = { version = "1.20.0", features = ["full"] }
tokio-postgres = "0.7.6"
warp = "0.3.2"
